- Added async and optimized some code with it - Changed thumbnails size - Separated checkAuths middleware into two new middleware => getUser and getIP - Replaced connect-multiparty with multer which is based on busboy, the most efficient file handler - Some clean up - English mistakes - Didn't fix angular video controller entirely so need to get back to it tomorrow

--- a/Client/views/video/upload.html
+++ b/Client/views/video/upload.html
@@ -34,7 +34,7 @@
 					<div class="panel-body">
 						<div class="form-group">
 							<label for="inputName" class="col-lg-2 control-label">Title</label>
-							<input type="text" class="form-control input-lg" ng-value="file.name" id="inputTitle">
+							<input type="text" class="form-control input-lg" ng-model="file.title" ng-init="file.title = file.name" id="inputTitle">
 						</div>
 						<div class="form-group">
 							<label for="textArea" class="col-lg-2 control-label">Description</label>
