- Fixed views - Working on suggest algorithm - Changed design

--- a/Client/styles/style.css
+++ b/Client/styles/style.css
@@ -1,7 +1,7 @@
 /*!
  * MewPipe
- * https://github.com/Adowya/MewPipe/graphs/contributors
- * Version: 0.0.2 - 2015-06-04T19:12:35.563Z
+ * Virtual Campus team
+ * Version: 1.0.0 - 2015-06-14T16:00:09.890Z
  * License: MIT
  */
 
