--- a/Client/views/video/user.html
+++ b/Client/views/video/user.html
@@ -15,7 +15,7 @@
                 <div class="grid-wrap">
                     <div class="grid">
                         <a href="#/video/show/{{video._id}}/">
-                           <figure class="effect-hera">
+                           <figure>
                                 <img ng-src="{{video.image}}" />
                                 <figcaption>
                                     <h2>
