--- a/Client/views/index.html
+++ b/Client/views/index.html
@@ -5,38 +5,21 @@
                 <h1>Most Viewed</h1>
                 <p>Here are MewPipe's most viewed videos. You can trust our users, they have the best tastes in video.</p>
                 <div id="index">
-                    <section class="grid3d horizontal" id="relatedVideo">
-                        <div class="grid-wrap">
-                            <div class="grid">
-                                <figure class="effect-hera" ng-repeat="video in relatedVideos">
-                                    <img ng-src="{{video.image}}" />
-                                    <figcaption>
-                                        <h2>
-                                            <span>{{video.name}}</span>
-                                        </h2>
-                                        <p>
-                                            <a>
-                                                <i class="fa fa-play-circle-o"></i>
-                                            </a>
-                                        </p>
-                                    </figcaption>
-                                </figure>
-                            </div>
-                        </div>
-                        <!-- /grid-wrap -->
-                        <div class="content">
-                            <div ng-repeat="video in relatedVideos">
-                                <ng-include src="'views/partial/show.html'"></ng-include>
-                            </div>
-                            <span class="loading"></span>
-                            <span class="icon close-content ns-close"></span>
-                        </div>
+                    <section id="relatedVideo" style="width: 300px;height: 290px;display: inline-block;position: relative;margin: 10px;overflow: hidden;" ng-repeat="video in relatedVideos">
+                        <a href="#/video/show/{{ video._id }}">
+                            <img ng-src="{{video.image}}" />
+                            <figcaption>
+                                <h2>
+                                    <span>{{video.name}}</span>
+                                </h2>
+                            </figcaption>
+                        </a>
                     </section>
                 </div>
             </div>
         </div>
     </div>
-    <div class="col-lg-12">
+    <div ng-if="app.getToken()" class="col-lg-12">
         <div class="bs-component">
             <div class="jumbotron">
                 <h1 id="container">Suggested</h1>
@@ -59,14 +42,6 @@
                                     </figcaption>
                                 </figure>
                             </div>
-                        </div>
-                        <!-- /grid-wrap -->
-                        <div class="content">
-                            <div ng-repeat="video in suggestVideos">
-                                <ng-include src="'views/partial/show.html'"></ng-include>
-                            </div>
-                            <span class="loading"></span>
-                            <span class="icon close-content ns-close"></span>
                         </div>
                     </section>
                 </div>
