--- a/Client/views/index.html
+++ b/Client/views/index.html
@@ -25,24 +25,15 @@
                 <h1 id="container">Suggested</h1>
                 <p>Here are some suggestions in relation to what you've watched in the past</p>
                 <div id="index">
-                    <section class="grid3d horizontal" id="suggestedVideo">
-                        <div class="grid-wrap">
-                            <div class="grid">
-                                <figure class="effect-hera" ng-repeat="suggestVideo in suggestVideos">
-                                    <img ng-src="{{suggestVideo.image}}" />
-                                    <figcaption>
-                                        <h2>
-                                            <span>{{suggestVideo.name}}</span>
-                                        </h2>
-                                        <p>
-                                            <a href="#">
-                                                <i class="fa fa-play-circle-o"></i>
-                                            </a>
-                                        </p>
-                                    </figcaption>
-                                </figure>
-                            </div>
-                        </div>
+                    <section id="suggestVideos" style="width: 300px;height: 290px;display: inline-block;position: relative;margin: 10px;overflow: hidden;" ng-repeat="video in suggestVideos">
+                        <a href="#/video/show/{{ video._id }}">
+                            <img ng-src="{{video.image}}" />
+                            <figcaption>
+                                <h2>
+                                    <span>{{video.name}}</span>
+                                </h2>
+                            </figcaption>
+                        </a>
                     </section>
                 </div>
             </div>
